--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,9 @@
     --foreground: #ededed;
   }
 }
-
+.post-card:hover {
+  transform: translateY(-12px); /* ✅ 위로 올라감 */
+}
 html,
 body {
   max-width: 100vw;
